--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
 	{
 		"bindings": "1.1.1"
 	},
+	"devDependencies": {
+		"mocha": "1.17.1"
+	},
 	"engines":
 	{
 		"node": ">=0.10.0"
+	},
+	"scripts": 
+	{
+		"test": "./node_modules/.bin/mocha test/* --reporter spec --colors"
 	}
 }
