--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	"dependencies": 
 	{
 		"bindings": "1.1.1",
-		"node-gyp": "3.0.2",
+		"node-gyp": "~0.12.1",
 		"nan": "2.0.9"
 	},
 	"devDependencies": {
