--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,29 @@
 language: node_js
+os:
+  - linux
+env:
+  - CC=gcc CXX="g++"
+  - CC=gcc-4.6 CXX="g++-4.6"
+  - CC=gcc-4.8 CXX="g++-4.8"
+  - CC=clang CXX=clang++ npm_config_clang=1
 node_js:
   - "0.12"
   - "0.11"
   - "0.10"
   - "4"
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - g++-4.6
+    - gcc-4.6
+    - g++-4.8
+    - gcc-4.8
+    - clang
+matrix:
+  exclude:
+    - node_js: "4"
+      env: CC=gcc CXX="g++"
+    - node_js: "4"
+      env: CC=gcc-4.6 CXX="g++-4.6"
