--- a/package.json
+++ b/package.json
@@ -9,21 +9,18 @@
 		"type": "git",
 		"url": "https://github.com/ndob/duktape-node"
 	},
-	"dependencies": 
-	{
+	"dependencies": {
 		"bindings": "1.1.1",
-		"node-gyp": "3.0.2",
-		"nan": "2.0.9"
+		"nan": "^2.14.0",
+		"node-gyp": "3.0.2"
 	},
 	"devDependencies": {
 		"mocha": "1.17.1"
 	},
-	"engines":
-	{
+	"engines": {
 		"node": ">=0.10.0"
 	},
-	"scripts": 
-	{
+	"scripts": {
 		"test": "./node_modules/.bin/mocha test/* --reporter spec --colors"
 	}
 }
